<resources>
    <string name="app_name">Young Moscow</string>
    <string name="title_activity_main">Young Moscow</string>
    <string name="title_main">Main</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="action_sign_in">Login</string>
    <string name="google_login">Google account</string>
    <string name="registration_button">Registration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="settings_welcome">Glad to see you, </string>
    <string name="exit_setting">Exit</string>
    <string name="title_settings">Settings</string>
    <string name="maps">Maps</string>
    <string name="exit">Exit</string>
    <string name="image">image</string>
    <string name="default_web_client_id">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</string> <!-- Добавьте эту строку -->
    <string name="Favourites">Favourites</string>
    <string name="usernameTxt">Username</string>
    <string name="emailTxt">Email</string>
    <string name="phoneTxt">Phone No.</string>
    <string name="passwordTxt">Password</string>
    <string name="profile">Profile</string>
    <string name="saveBtn">Save</string>
    <string name="sightseeings">Sight Seeings</string>
    <string name="google_maps_key">AIzaSyALObeMEcVyk1O0KpTo2b30XoNR1cj7TqM</string>
    <string name="CurrentPassword">Current Password</string>
    <string name="Favourite">Favourite</string>
    <string name="HaventSavedEvent">Have not saved event</string>
    <string name="FindInterestingEvent">Find interesting event and add to favourite</string>
    <string name="Welcome">Welcome</string>
    <string name="LoginInYourAcc">Login In Your Account</string>
    <string name="Profile">Profile</string>
    <string name="Registration">Registration</string>
    <string name="RegisterYouAcc">Register Your Account</string>
    <string name="upload_photo">Upload the photo</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="partys">Parties</string>
    <string name="holidays">Holidays</string>
    <string name="change_language">Change language</string>
    <string name="Sorry_there_a_problem_with_the_server">Sorry, there\'s a problem with the server</string>
    <string name="In_the_meantime_check_out_the_cool_events_on_the_main_screen">In the meantime, check out the cool events on the main screen :)</string>
    <string name="points">...</string>
    <string name="events">Events</string>

    <string-array name="language_names">
        <item>Abkhazian</item>
        <item>Afrikaans</item>
        <item>Albanian</item>
        <item>Amharic</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Azerbaijani</item>
        <item>Bangla</item>
        <item>Basque</item>
        <item>Belarusian</item>
        <item>Bosnian</item>
        <item>Bulgarian</item>
        <item>Burmese</item>
        <item>Chinese</item>
        <item>Chinese in China</item>
        <item>Chinese in Taiwan</item>
        <item>English</item>
        <item>German</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Spanish</item>
    </string-array>

    <string-array name="language_codes">
        <item>ab</item>
        <item>af</item>
        <item>sq</item>
        <item>am</item>
        <item>ar</item>
        <item>hy</item>
        <item>az</item>
        <item>bn</item>
        <item>eu</item>
        <item>be</item>
        <item>bs</item>
        <item>bg</item>
        <item>my</item>
        <item>zh</item>
        <item>zh_CN</item>
        <item>zh_TW</item>
        <item>en</item>
        <item>de</item>
        <item>pt</item>
        <item>ru</item>
        <item>es</item>
    </string-array>

</resources>